files-view: Fix memory leak

nautilus_file_get_mime_type() returns a newly
allocated string, which should be freed when no longer
required.

using g_autofree() automatically frees the string fixing the leak

https://bugzilla.gnome.org/show_bug.cgi?id=782070